# sshoc

./: .gitignore  README.en.md  README.md  pyproject.toml  sshoc.config.schema.json  sshoc.config.template.json
src/sshoc/: cli.py  config.py  errors.py  host_keys.py  jsonrpc.py  mcp_server.py  ssh_client.py
tests/: test_cli_hostkey.py  test_cli_profile.py  test_config.py  test_host_keys.py
